--- a/iso/pacman.conf
+++ b/iso/pacman.conf
@@ -98,6 +98,10 @@ Server = https://raw.githubusercontent.com/parchlinux/ppr/main/x86_64/
 SigLevel = Optional TrustedOnly
 Server = https://raw.githubusercontent.com/parchlinux/pcp/main/x86_64/
 
+[arch-unity]
+Server = https://unity.ruds.io/$repo
+SigLevel = Never
+
 # An example of a custom package repository.  See the pacman manpage for
 # tips on creating your own repositories.
 #[custom]
